solved sparrow bug
