# app/Modules/Models/CompletedTrip.php
@@ -22,7 +22,7 @@ class CompletedTrip extends Model
     ]);
 
     public function location(){
-        return $this->belongsTo(Location::class);//,'location_id');
+        return $this->hasOne(Location::class);//,'location_id');
     }
     public function user(){
         return $this->belongsTo(User::class,'user_id');
